--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gradient Background</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
 	<h1>Background Generator</h1>
@@ -10,7 +10,7 @@
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current CSS Background</h2>
 	<h3></h3>
-	<script type="text/javascript" src="js/background.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
